--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,12 +4,16 @@
     <%- include('./partials/head') %>
     <title>Homepage</title>
 </head>
-<body>
-    <%- include('./partials/nav') %>
+<!-- <body>
+   
 
     <h1>Welcome to the Blog!</h1>
     <p>This is the homepage.</p>
 
+</body> -->
+<body>
+    <%- include('./partials/nav') %>
+    <%= JSON.stringify(user) %>
     <%- include('./partials/scripts') %>
 </body>
 </html>
