--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,18 +9,29 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Add Blogs</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Anand Gautam
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Logout</a></li>
-            </ul>
-          </li>
+          <% if (locals.user) { %>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Add Blog</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Anand Gautam
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Logout</a></li>
+              </ul>
+            </li>
+            <% } else { %>
+              <li class="nav-item">
+                  <a class="nav-link" href="/user/signup">create account</a>
+              </li>
+              <% } %>
         </ul>
       </div>
     </div>
   </nav>
+
+  <% if (typeof error !== "undefined" && error) { %>
+    <div class="alert alert-danger" role="alert"><%= error %></div>
+<% } %>
+
